--- a/LoginRegisterDash/Client/src/App.css
+++ b/LoginRegisterDash/Client/src/App.css
@@ -11,7 +11,7 @@
   --hoverColor: hsl(93, 75%, 76%);
   --paleGreen: hsl(96, 75%, 89%);
   --whiteColor: hsl(0, 0%, 100%);
-  --blackColor: hsl(0, 0%, 18%);
+  --blackColor: #181616d9;
   --greyText: hsl(0, 0%, 75%);
   --bgColor: hsl(113, 11%, 85%);
   --inputColor: hsl(330, 12%, 97%);
@@ -102,7 +102,7 @@ img, video {
   margin: auto;
   justify-content: space-between;
   border-radius: 10px;
-  background: hsl(0, 0%, 91%);
+  background: #065b3c;
 }
 .loginPage .videoDiv, .registerPage .videoDiv {
   position: relative;
