--- a/LoginRegisterDash/Client/src/App.css
+++ b/LoginRegisterDash/Client/src/App.css
@@ -252,7 +252,9 @@ img, video {
   cursor: pointer;
   opacity: 1;
 }
-
+.forgotPassword a{
+  color:rgb(77, 157, 255);
+}
 .dashboard {
   height: 100vh;
   width: 100%;
